--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.0",
+    "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.60.0",
     "webpack-cli": "^4.9.1",
