--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "api4-project",
   "version": "1.0.0",
   "description": "In this challenge, you will build a simple Express app and deploy it to Heroku.",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "start": "node ./index.js",
     "dev": "nodemon ./index.js",
