--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "private": true,
   "scripts": {
+    "start": "webpack serve --mode development",
     "build": "webpack --mode production"
   },
   "keywords": [],
